statum-macros/tests/ui/invalid_state_struct_variant.rs
#![allow(unused_imports)]
use statum_macros::state;

#[state]
enum BadState {
    Draft { version: u32 },
}